PB-271: Reduces overlay width to viewport size to avoid element being out of screen in cypress tests

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -33,7 +33,7 @@ $zindex-drawing-toolbox: 3;
 $header-height: 3rem;
 $dev-disclaimer-height: 1.5rem;
 $footer-height: 1.5rem;
-$overlay-width: 360px;
+$overlay-width: 320px;
 $menu-tray-width: 24rem;
 $drawing-tools-height-mobile: 121px;
 
